--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fullcalendar/interaction": "^6.1.17",
     "@fullcalendar/list": "^6.1.17",
     "@fullcalendar/react": "^6.1.17",
+    "@fullcalendar/rrule": "^6.1.17",
     "axios": "^1.8.4",
     "next": "15.2.4",
     "next-intl": "^4.0.2",
